# serial-connector

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/serial_connector/: __main__.py  cli.py  config.py  connector.py  constants.py  interfaces.py  main.py  output.py  user.py
src/serial_debug/: __main__.py  main.py
