[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.townccrier]
package = "serial_connector"
package_dir = "src"

[project]
name = "serial_connector"
version = "0.0.1"
authors = [
  { name = "Dmytro Prykhodko" }
]
description = "Communicate with a serial port"
readme = "README.md"
requires-python = ">=3.8.10"
classifiers = [
  "Programminge Language :: Python 3:: ",
  "License :: OSI Approved :: MIT License",
  "Operationg System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/edpryk/serial-connector"